fix widget settings z-index (tooltip was over settings popup) 5 min

--- a/src/css/widgets.less
+++ b/src/css/widgets.less
@@ -823,11 +823,8 @@
 	width: 100%;
 	height: 100%;
 	top: 0; left: 0;
-	z-index: 100;
+	z-index: 1200;
 	position: fixed;
-	
-	// background: rgba(0,0,0,0.2);
-	// filter: blur(5px);
 
 	.background{
 		width: 100%;
